src/example_tbs/dma_axi/dma_axi32_core0_ch_reg/compile_result.txt
file: dma_axi32_core0_ch_reg.v
module: dma_axi32_core0_ch_reg
status: FAIL
slang_output:

Build failed: 20 errors, 0 warnings
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:85:14: error: unknown macro or compiler directive '`X_BITS'
   input [10-`X_BITS-1:0]          rd_y_offset;    
             ^~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:87:14: error: unknown macro or compiler directive '`X_BITS'
   input [10-`X_BITS-1:0]          wr_y_offset;    
             ^~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:97:15: error: unknown macro or compiler directive '`X_BITS'
   output [10-`X_BITS-1:0]          y_size;
              ^~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:103:12: error: unknown macro or compiler directive '`FRAME_BITS'
   output [`FRAME_BITS-1:0]      frame_width;
           ^~~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:105:12: error: unknown macro or compiler directive '`DELAY_BITS'
   output [`DELAY_BITS-1:0]      rd_periph_delay;
           ^~~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:107:12: error: unknown macro or compiler directive '`DELAY_BITS'
   output [`DELAY_BITS-1:0]      wr_periph_delay;
           ^~~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:109:12: error: unknown macro or compiler directive '`TOKEN_BITS'
   output [`TOKEN_BITS-1:0]      rd_tokens;
           ^~~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:110:12: error: unknown macro or compiler directive '`TOKEN_BITS'
   output [`TOKEN_BITS-1:0]      wr_tokens;
           ^~~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:113:12: error: unknown macro or compiler directive '`OUT_BITS'
   output [`OUT_BITS-1:0]      rd_outs_max;
           ^~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:114:12: error: unknown macro or compiler directive '`OUT_BITS'
   output [`OUT_BITS-1:0]      wr_outs_max;
           ^~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:115:11: error: unknown macro or compiler directive '`OUT_BITS'
   input [`OUT_BITS-1:0]      rd_outs;
          ^~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:116:11: error: unknown macro or compiler directive '`OUT_BITS'
   input [`OUT_BITS-1:0]      wr_outs;
          ^~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:118:12: error: unknown macro or compiler directive '`WAIT_BITS'
   output [`WAIT_BITS-1:0]      rd_wait_limit;
           ^~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:119:12: error: unknown macro or compiler directive '`WAIT_BITS'
   output [`WAIT_BITS-1:0]      wr_wait_limit;
           ^~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:162:13: error: unknown macro or compiler directive '`X_BITS'
   wire [10-`X_BITS-1:0]          y_size;
            ^~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:164:9: error: unknown macro or compiler directive '`FRAME_BITS'
   reg [`FRAME_BITS-1:0]      frame_width_reg;  
        ^~~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:178:9: error: unknown macro or compiler directive '`DELAY_BITS'
   reg [`DELAY_BITS-1:0]      rd_periph_delay_reg;
        ^~~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:180:9: error: unknown macro or compiler directive '`TOKEN_BITS'
   reg [`TOKEN_BITS-1:0]      rd_tokens_reg;
        ^~~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:181:9: error: unknown macro or compiler directive '`OUT_BITS'
   reg [`OUT_BITS-1:0]          rd_outs_max_reg;
        ^~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_reg.v:190:9: error: unknown macro or compiler directive '`WAIT_BITS'
   reg [`WAIT_BITS-1:4]      rd_wait_limit_reg;
        ^~~~~~~~~~
fatal error: too many errors emitted, stopping now [--error-limit=]

